--- a/index.html
+++ b/index.html
@@ -1,71 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JaarviScript</title>
     <style>
-        body {
-            background-image: url("background1.jpg");
-            /* backdrop-filter: ;; */
-            background-size: cover;
-            /* border-bottom-left-radius: 20px; */
-        }
+      body {
+        background-image: url('background1.jpg');
+        /* backdrop-filter: ;; */
+        background-size: cover;
+        /* border-bottom-left-radius: 20px; */
+      }
 
-        ul li {
-            float: left;
-            padding: 20px;
-            color: bisque;
-        }
+      ul li {
+        float: left;
+        padding: 20px;
+        color: bisque;
+      }
 
-        #contact {
-            background-color: blueviolet;
-            padding: 20px;
-            float: right;
-            border-radius: 20px;
-            margin: 20px;
-        }
+      #contact {
+        background-color: blueviolet;
+        padding: 20px;
+        float: right;
+        border-radius: 20px;
+        margin: 20px;
+      }
 
-        #insideImage {
-            padding: 40px ;
-            margin: 40px;
-            font-size: 40px;
-            color: blanchedalmond;
-            position: relative;
-            /* left: 300px; */
-            text-align: center;
-            top: 400px;
-
-        }
-        
+      #insideImage {
+        padding: 40px;
+        margin: 40px;
+        font-size: 40px;
+        color: blanchedalmond;
+        position: relative;
+        /* left: 300px; */
+        text-align: center;
+        top: 400px;
+      }
+      .qoutes {
+        border: 1px red;
+        display: flex;
+        overflow-x: auto;
+      }
+      .qoute-item {
+        background: #444;
+        border: 5px solid gold;
+        padding: 30px;
+        margin: 10px;
+        border-radius: 10px;
+        color: white;
+      }
+      .nav-link {
+        color: white;
+        text-decoration: none;
+        font-size: 1.2em;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <nav>
-        <ul>
-            <li style="list-style-type: none;"><a href="#">Home</a></li>
-            <li style="list-style-type: none;"><a href="#">Menu</a></li>
-            <li style="list-style-type: none;"><a href="chef.html">Chefs</a></li>
-            <li style="list-style-type: none;"><a href="#">Reservations</a></li>
-            <li style="list-style-type: none;"><a href="#">About Us</a></li>
-        </ul>
-        <span id="contact">Contact US</span>
+      <ul>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Home</a>
+        </li>
+        <li class="nav-item" style="list-style-type: none">
+          <a class="nav-link" href="#">Menu</a>
+        </li>
+        <li class="nav-item" style="list-style-type: none">
+          <a class="nav-link" href="chef.html">Chefs</a>
+        </li>
+        <li class="nav-item" style="list-style-type: none">
+          <a class="nav-link" href="#">Reservations</a>
+        </li>
+        <li class="nav-item" style="list-style-type: none">
+          <a class="nav-link" href="#">About Us</a>
+        </li>
+      </ul>
+      <span id="contact">Contact US</span>
     </nav>
     <main>
-        <p id="insideImage">GET THE BEST FROM THE BEST
+      <p id="insideImage">GET THE BEST FROM THE BEST</p>
+
+      <!-- yaha wla 3 line ko horizontal scroll  me rakhna hai -->
+      <!-- ek sundar sa gola banana usme yeh quotes rakhna aur scroll rakhna horizontal -->
+      <div class="qoutes">
+        <p class="qoute-item">
+          SOME PEOPLE TRUST IN TINDER , BUT I STILL BELIEVE IN COLLEGE FESTS.
+          -DR. D
         </p>
-
-        <!-- yaha wla 3 line ko horizontal scroll  me rakhna hai -->
-        <!-- ek sundar sa gola banana usme yeh quotes rakhna aur scroll rakhna horizontal -->
-        <p>SOME PEOPLE TRUST IN TINDER , BUT I STILL BELIEVE IN COLLEGE FESTS.                     -DR. D</p>
-        <p>STUDENT CAN'T FOCUS IF THEIR STOMACH HURTS BECAUE THEY ARE HUNGRY.-DIANE GILLEN    </p>
-        <p>CAULIFLOWER IS NOTHING BUT A CABBAGE WITH COLLEGE EDUCATION.-MARK TWAINZ</p>
+        <p class="qoute-item">
+          STUDENT CAN'T FOCUS IF THEIR STOMACH HURTS BECAUE THEY ARE
+          HUNGRY.-DIANE GILLEN
+        </p>
+        <p class="qoute-item">
+          CAULIFLOWER IS NOTHING BUT A CABBAGE WITH COLLEGE EDUCATION.-MARK
+          TWAINZ
+        </p>
+      </div>
     </main>
-    <footer>
-
-    </footer>
-</body>
-
+    <footer></footer>
+  </body>
 </html>
