--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
         #contact {
             background-color: blueviolet;
-            padding: 20px;
+            padding: 21px;
             float: right;
             border-radius: 20px;
-            margin: 20px;
+            margin: 21px;
         }
 
         #insideImage {
@@ -48,7 +48,7 @@
             <li style="list-style-type: none;"><a href="#">Home</a></li>
             <li style="list-style-type: none;"><a href="#">Menu</a></li>
             <li style="list-style-type: none;"><a href="chef.html">Chefs</a></li>
-            <li style="list-style-type: none;"><a href="#">Reservations</a></li>
+            <li style="list-style-type: none;"><a href="#">Reservation's</a></li>
             <li style="list-style-type: none;"><a href="#">About Us</a></li>
         </ul>
         <span id="contact">Contact US</span>
